changes to language model deployment

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>Inspectra - AI-Powered Image Analysis</title>
     <meta name="description" content="Upload images and extract insights using AI-powered analysis. Get detailed descriptions and valuable information from your visual content." />
